[package]
name = "teecity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.19"
bevy_ecs_tilemap = "0.11"
